--- a/table.html
+++ b/table.html
@@ -15,6 +15,9 @@
 		<link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
 		<title>Dashboard</title>
 	</head>
+
+	<!-- ==========Sidebar Starts======== -->
+
 	<body>
 		<section class="sidebar">
 			<div class="container">
@@ -40,6 +43,11 @@
 				</div>
 			</div>
 		</section>
+
+		<!-- ==========Sidebar Ends======== -->
+
+		<!-- ==========Navigation Starts======== -->
+
 		<section class="nav">
 			<div class="container">
 				<div class="search-box">
@@ -60,6 +68,11 @@
 				>
 			</div>
 		</section>
+
+		<!-- ==========Navigation Ends======== -->
+
+		<!-- ==========Main Content Starts======== -->
+
 		<section class="main_content">
 			<div class="container">
 				<div class="info_box">
@@ -96,6 +109,152 @@
 						</div>
 					</div>
 				</div>
+
+				<!-- ==========Form Starts======== -->
+				<form action="#">
+					<div class="form_section">
+						<h1 class="form_title">First Section</h1>
+						<div class="input_group">
+							<div class="input_single">
+								<p class="input_title">Input title</p>
+								<input
+									name="name"
+									type="text"
+									class="input"
+									placeholder="Placeholder here"
+								/>
+							</div>
+							<div class="input_single">
+								<p class="input_title">Input title</p>
+								<input
+									name="name"
+									type="text"
+									class="input"
+									placeholder="Placeholder here"
+								/>
+							</div>
+						</div>
+					</div>
+					<div class="form_section">
+						<div class="input_group">
+							<div class="input_single long">
+								<p class="input_title">Input title</p>
+								<input
+									name="name"
+									type="text"
+									class="input"
+									placeholder="Placeholder here"
+								/>
+							</div>
+							<div class="input_single small">
+								<label for="cars" class="input_title">Choose an option</label>
+								<select
+									class="input select"
+									id="cars"
+									name="cars"
+									placeholder="Choose a car"
+								>
+									<option>Select an option</option>
+									<option value="option 1">option 2</option>
+									<option value="option 2">option 2</option>
+									<option value="option 3">option 3</option>
+									<option value="option 4">option 4</option>
+									<option value="option 5">option 5</option>
+								</select>
+							</div>
+						</div>
+					</div>
+					<div class="form_section">
+						<div class="input_group">
+							<div class="input_single small">
+								<p class="input_title">Input title</p>
+								<input
+									name="name"
+									type="text"
+									class="input"
+									placeholder="Placeholder here"
+								/>
+							</div>
+							<div class="input_single long">
+								<p class="input_title">Input title</p>
+								<input
+									name="name"
+									type="text"
+									class="input"
+									placeholder="Placeholder here"
+								/>
+							</div>
+						</div>
+					</div>
+					<div class="form_section">
+						<h1 class="form_title">Second Section</h1>
+						<div class="input_group">
+							<div class="input_single">
+								<p class="input_title">Input title</p>
+								<input
+									name="name"
+									type="date"
+									class="input date"
+									placeholder="Placeholder here"
+								/>
+							</div>
+							<div class="input_single">
+								<label for="cars" class="input_title">Choose an option</label>
+								<select
+									class="input select"
+									id="cars"
+									name="cars"
+									placeholder="Choose a car"
+								>
+									<option>Select an option</option>
+									<option value="option 1">option 2</option>
+									<option value="option 2">option 2</option>
+									<option value="option 3">option 3</option>
+									<option value="option 4">option 4</option>
+									<option value="option 5">option 5</option>
+								</select>
+							</div>
+							<div class="input_single input_radio">
+								<p class="input_title">Input title</p>
+								<div class="dataset">
+									<div>
+										<input
+											type="radio"
+											id="radio"
+											name="drone"
+											value="radio"
+											checked
+										/>
+										<label for="option 1">option 1</label>
+									</div>
+
+									<div>
+										<input
+											type="radio"
+											id="option 2"
+											name="drone"
+											value="option 2"
+										/>
+										<label for="option 2">option 2</label>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="form_section">
+						<div class="input_group">
+							<div class="input_single checkbox">
+								<input name="name" type="checkbox" class="input" for="select" />
+								<label for="input" class="input_title"
+									>Agree with the terms and conditions</label
+								>
+							</div>
+						</div>
+					</div>
+					<input type="Submit" value="Submit" class="submit" />
+				</form>
+				<!-- ==========Form Ends======== -->
+
 				<table class="table">
 					<thead>
 						<tr>
@@ -304,6 +463,8 @@
 				</table>
 			</div>
 		</section>
+
+		<!-- ==========Main Content Ends======== -->
 
 		<script src="./assets/js/chart.min.js"></script>
 		<script src="./assets/js/script.js"></script>
