added forgot pass & mail

--- a/table.html
+++ b/table.html
@@ -112,6 +112,7 @@
 
 				<!-- ==========Form Starts======== -->
 				<form action="#">
+					<h1 class="form_heading">This is the form heading</h1>
 					<div class="form_section">
 						<h1 class="form_title">First Section</h1>
 						<div class="input_group">
@@ -166,14 +167,11 @@
 					</div>
 					<div class="form_section">
 						<div class="input_group">
-							<div class="input_single small">
-								<p class="input_title">Input title</p>
-								<input
-									name="name"
-									type="text"
-									class="input"
-									placeholder="Placeholder here"
-								/>
+							<div class="input_single small file">
+								<label for="photo" class="input_title" id="photo_label"
+									><i class="fa-solid fa-file-arrow-up"></i>Upload a file</label
+								>
+								<input name="photo" type="file" class="input" id="photo" />
 							</div>
 							<div class="input_single long">
 								<p class="input_title">Input title</p>
@@ -299,173 +297,21 @@
 							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
 							<td><p class="user_active">Active</p></td>
 						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_inactive">Inactive</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_active">Active</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_inactive">Inactive</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_active">Active</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_inactive">Inactive</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_active">Active</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_inactive">Inactive</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_active">Active</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_inactive">Inactive</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_active">Active</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_inactive">Inactive</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_active">Active</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_inactive">Inactive</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_active">Active</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_inactive">Inactive</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_active">Active</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_inactive">Inactive</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_active">Active</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_inactive">Inactive</p></td>
-						</tr>
-						<tr>
-							<td scope="row">1</td>
-							<td>Galib Jaman</td>
-							<td>gj.emon35@gmail.com</td>
-							<td>+8801 785 215</td>
-							<td><img src="./assets/img/profile.jpg" alt="img" /></td>
-							<td><p class="user_active">Active</p></td>
-						</tr>
 					</tbody>
 				</table>
 			</div>
 		</section>
 
 		<!-- ==========Main Content Ends======== -->
-
+		<script>
+			const photo = document.querySelector("#photo");
+			const photo_label = document.querySelector("#photo_label");
+			let file_name = photo.value;
+			file_name.addEventListener.change(function () {
+				photo_label.innerHTML =
+					"<i class='fa-solid fa-file-arrow-up'></i>".file_name;
+			});
+		</script>
 		<script src="./assets/js/chart.min.js"></script>
 		<script src="./assets/js/script.js"></script>
 	</body>
