--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="./assets/css/style.css" />
+		<link rel="stylesheet" href="./assets/css/style.min.css" />
 		<link rel="stylesheet" href="./assets/css/css/all.css" />
 		<link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
 		<title>Dashboard</title>
@@ -84,6 +84,15 @@
 						<div class="info_text">
 							<h1 class="number">1,251,230</h1>
 							<p>Trees planted</p>
+						</div>
+					</div>
+					<div class="info_single info4">
+						<div class="info-icon">
+							<i class="fa-solid fa-handshake-angle"></i>
+						</div>
+						<div class="info_text">
+							<h1 class="number">$362,612</h1>
+							<p>Donated</p>
 						</div>
 					</div>
 					<div class="info_single info4">
