--- a/table.html
+++ b/table.html
@@ -10,7 +10,7 @@
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="./assets/css/style.css" />
+		<link rel="stylesheet" href="./assets/css/style.min.css" />
 		<link rel="stylesheet" href="./assets/css/css/all.css" />
 		<link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
 		<title>Dashboard</title>
